--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "test": "jest"
+    "test": "jest",
+    "be": "cd ./json && json-server --watch contoh.json --port 3100"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
